added social id link

--- a/index.html
+++ b/index.html
@@ -44,10 +44,9 @@
                         <div class="social-media">
                     
                         <ul>
-                           <li><i class="ri-github-line"></i><a href="#">GitHup</a></li>
-                           <li><i class="ri-linkedin-line"></i><a href="#">LinkedIn</a></li>
-                           <li><i class="ri-instagram-line"></i><a href="#">Instagram</a></li>
-                           <li><i class="ri-whatsapp-line"></i>9163198477</li>
+                           <li><i class="ri-github-line"></i><a href="https://github.com/amiralamf4">GitHup</a></li>
+                           <li><i class="ri-linkedin-line"></i><a href="www.linkedin.com/in/amiralamf4">LinkedIn</a></li>
+                           <li><i class="ri-instagram-line"></i><a href="https://www.instagram.com/salaar_sikandar_18/">Instagram</a></li>
                            <li> <a class="cv" href="3" download="Amir Alam">DOWNLOAD <i class="ri-arrow-down-circle-line"></i></a></li>
                         </ul>
                         <div id="close">
